--- a/public/report/ReporteCajas.jrxml
+++ b/public/report/ReporteCajas.jrxml
@@ -140,13 +140,6 @@
 				</textElement>
 				<textFieldExpression><![CDATA["s/."+$F{totIngresos}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement positionType="FixRelativeToBottom" x="316" y="172" width="84" height="20" forecolor="#FFC800" uuid="e438d8cb-c081-4247-91ea-7389f1713a82"/>
-				<textElement>
-					<font size="10" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA["s/."+$F{totMontoBruto}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement positionType="FixRelativeToBottom" x="136" y="172" width="44" height="20" uuid="eb877ce3-f248-4cff-8d06-92997a44b08e"/>
 				<textElement>
@@ -158,14 +151,18 @@
 				<reportElement positionType="FixRelativeToBottom" x="136" y="193" width="417" height="1" uuid="524b186f-3dd4-475a-b300-c49c273995ab"/>
 			</line>
 			<textField>
-				<reportElement x="168" y="13" width="100" height="20" uuid="38cd8933-675e-4f0b-a247-1edf3507f0ff"/>
+				<reportElement positionType="FixRelativeToBottom" x="316" y="172" width="84" height="20" uuid="6e1312cb-78ee-49f9-8ec4-eba6cb437179"/>
+				<textFieldExpression><![CDATA["s/."+$F{totMontoBruto}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="168" y="13" width="100" height="20" uuid="5a4458d2-4378-47f8-9ef7-3cf308315a6a"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{totIngresos}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="168" y="44" width="100" height="20" uuid="d13477dc-bd16-40fd-8da8-41e1521e1182"/>
+				<reportElement x="168" y="44" width="100" height="20" uuid="33249e87-9051-4210-afe6-0a3c1d0f9b9c"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
