--- a/public/js/app/sales/views/index.html
+++ b/public/js/app/sales/views/index.html
@@ -42,6 +42,31 @@
                   </div>
                 </div><!-- /.box-header -->
                 <div class="box-body">
+                 <div class="row">
+                <div class="col-md-1">  </div>
+                    <div class="col-md-4">                             
+                            <label for="fechaPedido">Fecha Inicio: </label>
+                            <div ng-hide="show" class="input-group">
+                                <div class="input-group-addon">
+                                      <i class="fa fa-calendar"></i>
+                                </div>
+                                  <input type="date" class="form-control"  name="fechainicio" ng-model="fechainicio" >
+                            </div>                          
+                        </div> 
+                         <div class="col-md-4">                             
+                            <label for="fechaPedido">Fecha Fin: </label>
+                            <div ng-hide="show" class="input-group">
+                                <div class="input-group-addon">
+                                      <i class="fa fa-calendar"></i>
+                                </div>
+                                  <input type="date" class="form-control"  ng-model="fechafin" >
+                            </div>                          
+                        </div>
+                        <div class="col-md-2"> 
+                        <label></label> <br>
+                        <input ng-disabled="fechafin<fechainicio" type="button" class="btn btn-warning" ng-click="GenReporteCajas()" value="{{decriboton}}">
+                        </div>
+                </div>
                 <!--
                     <div class="row">
                         <div class="col-sm-10">
@@ -68,18 +93,23 @@
                       <th>Vendedor</th>
                       <th>Estado Pago</th>
                       <th>Estado Venta</th>
+                        <th>Notas</th>
                       <th style="width: 40px">Detalle</th>
                     </tr>
                     
                     <tr ng-repeat="row in orders">
                       <td>{{$index + 1}}</td>
                       <td>{{row.fechaPedido}}</td>
-                      <td>{{row.fechaAnulado}}</td>
+                      <td ng-if="row.fechaAnulado == '0000-00-00 00:00:00'">-</td>
+                      <td ng-if="row.fechaAnulado != '0000-00-00 00:00:00'">{{row.fechaAnulado}}</td>
                       <td>{{row.montoTotal}}</td>                      
                       <td>{{row.customer.nombres+' '+row.customer.apellidos+' - '+row.customer.empresa}}</td>
                       <td>{{row.employee.nombres+' '+row.employee.apellidos}}</td>
-                      <td>{{row.estado==1? 'Pendiente':'Terminado'}}</td>
-                      <td>{{row.estadoPago==1? 'Credito':'Contado'}}</td> 
+                      <td ng-if="row.estado==1"><span style="color: green;">Terminado</span></td>
+                      <td ng-if="row.estado==0"><span style="color: yellow;">Pendiente</span></td>
+                      <td ng-if="row.estado==3"><span style="color: red;">Anulado</span></td>
+                      <td>{{row.estadoPago==1? 'Credito':'Contado'}}</td>
+                        <td><i>{{row.notas}}</i></td>
                       <td><a ng-click="editorder(row)" class="btn btn-warning btn-xs">Ver</a></td>
                       
                       
