--- a/public/report/ReporteVentas2.jrxml
+++ b/public/report/ReporteVentas2.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReporteVentas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="8ef771bc-de0e-41a0-9d1d-a47119ea8c9f">
-	<property name="ireport.zoom" value="2.0"/>
+	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String">
@@ -15,8 +15,11 @@
 	<parameter name="estado" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["/usr/share/nginx/html/salesfly/public/report/"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[select detSeparateSales.created_at as fecha,variants.id as varid,ROUND((detPres.suppPri*detSeparateSales.cantidad),2) as precioCompra,ROUND((detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)),2)as ganacia,variants.sku,brands.nombre as marca,products.codigo,types.nombre as linea,stations.nombre as estacion,products.modelo,detSeparateSales.subTotal,detSeparateSales.estado as estado,ROUND(detSeparateSales.cantidad,0) AS cantidad,separateSales.estado as estadoSepPedi,saleMethodPayments.nombre as SMPNombre,(select dt.descripcion from detAtr dt inner join variants v on v.id=dt.variant_id inner join atributes atr on atr.id=dt.atribute_id where v.id=varid and atr.nombre="Color" ) as color,(select dt.descripcion from detAtr dt inner join variants v on v.id=dt.variant_id inner join atributes atr on atr.id=dt.atribute_id where v.id=varid and atr.nombre="Taco" ) as Taco, (select dt.descripcion from detAtr dt inner join variants v on v.id=dt.variant_id inner join atributes atr on atr.id=dt.atribute_id where v.id=varid and atr.nombre="Talla" ) as Talla ,separateSales.tipo,salePayments.Acuenta,salePayments.Saldo
+		<![CDATA[select separateSales.id,customers.nombres as nomCliente,detSeparateSales.created_at as fecha,variants.id as varid,ROUND((detPres.suppPri*detSeparateSales.cantidad),2) as precioCompra,ROUND((detSeparateSales.subTotal-(detPres.suppPri*detSeparateSales.cantidad)),2)as ganacia,variants.sku,brands.nombre as marca,products.codigo,types.nombre as linea,stations.nombre as estacion,products.modelo,detSeparateSales.subTotal,detSeparateSales.estado as estado,ROUND(detSeparateSales.cantidad,0) AS cantidad,separateSales.estado as estadoSepPedi,saleMethodPayments.nombre as SMPNombre,(select dt.descripcion from detAtr dt inner join variants v on v.id=dt.variant_id inner join atributes atr on atr.id=dt.atribute_id where v.id=varid and atr.nombre="Color" ) as color,(select dt.descripcion from detAtr dt inner join variants v on v.id=dt.variant_id inner join atributes atr on atr.id=dt.atribute_id where v.id=varid and atr.nombre="Taco" ) as Taco, (select dt.descripcion from detAtr dt inner join variants v on v.id=dt.variant_id inner join atributes atr on atr.id=dt.atribute_id where v.id=varid and atr.nombre="Talla" ) as Talla ,separateSales.tipo,salePayments.Acuenta,salePayments.Saldo
                 from detSeparateSales
                      left join detPres on detPres.id=detSeparateSales.detPre_id
                      left join variants on variants.id=detPres.variant_id
@@ -24,8 +27,8 @@
                      left join brands on products.brand_id=brands.id
                      left join types on products.type_id=types.id
                      left join stations on products.station_id=stations.id
-
                      inner join separateSales on separateSales.id=detSeparateSales.separateSale_id
+                     inner join customers on customers.id=separateSales.customer_id
                      left join salePayments on salePayments.separateSale_id=detSeparateSales.id
                      left join saledetPayments on saledetPayments.salePayment_id=salePayments.id
                      left join saleMethodPayments on saleMethodPayments.id=saledetPayments.saleMethodPayment_id
@@ -33,6 +36,10 @@
                     where separateSales.estado like $P{estado} and separateSales.tipo like $P{tipo} and detSeparateSales.created_at between $P{fechaini} and $P{fechafin}
                     group by separateSales.id]]>
 	</queryString>
+	<field name="id" class="java.lang.Long">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nomCliente" class="java.lang.String"/>
 	<field name="fecha" class="java.sql.Timestamp"/>
 	<field name="varid" class="java.lang.Long"/>
 	<field name="precioCompra" class="java.math.BigDecimal"/>
@@ -95,7 +102,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7" isBold="true"/>
 				</textElement>
-				<text><![CDATA[fecha]]></text>
+				<text><![CDATA[Cliente]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Opaque" x="41" y="0" width="21" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="e93c7d98-e2a8-4c22-84a8-10417619c80c"/>
@@ -205,122 +212,127 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="29">
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="19" width="595" height="1" uuid="e40e3c5c-23c0-4b73-a3ca-0b0f2774694e"/>
-			</line>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy">
-				<reportElement x="0" y="0" width="41" height="20" uuid="772f215d-3723-4e64-bb2b-8cbd4b4d80f5"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="6"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{fecha}]]></textFieldExpression>
-			</textField>
+		<band height="51">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="41" y="0" width="21" height="20" uuid="019ea02e-4682-4962-8c5e-48d484c3fa09"/>
+				<reportElement mode="Opaque" x="41" y="0" width="21" height="20" backcolor="#4DBAD5" uuid="019ea02e-4682-4962-8c5e-48d484c3fa09"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sku}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="61" y="0" width="32" height="20" uuid="ab5dfb13-8d47-4343-b16b-a17e928e9bf6"/>
+				<reportElement mode="Opaque" x="61" y="0" width="32" height="20" backcolor="#4DBAD5" uuid="ab5dfb13-8d47-4343-b16b-a17e928e9bf6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{marca}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="93" y="0" width="32" height="20" uuid="2bdbac96-7a1a-4891-93f1-317510f70ba6"/>
+				<reportElement mode="Opaque" x="93" y="0" width="32" height="20" backcolor="#4DBAD5" uuid="2bdbac96-7a1a-4891-93f1-317510f70ba6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="153" y="0" width="40" height="20" uuid="cf69248b-87d0-4cae-9b9e-506e41163079"/>
+				<reportElement mode="Opaque" x="153" y="0" width="40" height="20" backcolor="#4DBAD5" uuid="cf69248b-87d0-4cae-9b9e-506e41163079"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{estacion}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="125" y="0" width="28" height="20" uuid="b13fdb13-d6b5-44e3-82c8-307f19c2dd07"/>
+				<reportElement mode="Opaque" x="125" y="0" width="28" height="20" backcolor="#4DBAD5" uuid="b13fdb13-d6b5-44e3-82c8-307f19c2dd07"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{linea}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="509" y="0" width="43" height="20" forecolor="#C434BE" uuid="34465faa-1e79-44ba-9b61-8f29d6f93f80"/>
+				<reportElement mode="Opaque" x="509" y="0" width="43" height="20" forecolor="#C434BE" backcolor="#4DBAD5" uuid="34465faa-1e79-44ba-9b61-8f29d6f93f80"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{precioCompra}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="552" y="0" width="43" height="20" forecolor="#00FF00" uuid="734310c4-199f-4580-a0b8-6c0c7ff0ef9e"/>
+				<reportElement mode="Opaque" x="552" y="0" width="43" height="20" forecolor="#00FF00" backcolor="#4DBAD5" uuid="734310c4-199f-4580-a0b8-6c0c7ff0ef9e"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{ganacia}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="275" y="0" width="52" height="20" uuid="c611a7bb-5250-45e1-911e-42cc04d2a9f1"/>
+				<reportElement mode="Opaque" x="275" y="0" width="52" height="20" backcolor="#4DBAD5" uuid="c611a7bb-5250-45e1-911e-42cc04d2a9f1"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{tipo}.equals('1')?"Separado":"Pedido"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="419" y="0" width="53" height="20" forecolor="#0000FF" uuid="263b93bb-d35f-47d6-9f72-743e547d7232"/>
+				<reportElement mode="Opaque" x="419" y="0" width="53" height="20" forecolor="#0000FF" backcolor="#4DBAD5" uuid="263b93bb-d35f-47d6-9f72-743e547d7232"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{Acuenta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="472" y="0" width="37" height="20" forecolor="#FF0000" uuid="1a08dfc3-0f28-4868-82e0-36b2ad9e0957"/>
+				<reportElement mode="Opaque" x="472" y="0" width="37" height="20" forecolor="#FF0000" backcolor="#4DBAD5" uuid="1a08dfc3-0f28-4868-82e0-36b2ad9e0957"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{Saldo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="193" y="0" width="36" height="20" uuid="1694a45e-17c1-4673-94b0-7d529be80d5b"/>
+				<reportElement mode="Opaque" x="193" y="0" width="36" height="20" backcolor="#4DBAD5" uuid="1694a45e-17c1-4673-94b0-7d529be80d5b"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{color}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="230" y="0" width="22" height="20" uuid="c632eb6f-7b60-4e7f-92a2-65862774fc03"/>
+				<reportElement mode="Opaque" x="230" y="0" width="22" height="20" backcolor="#4DBAD5" uuid="c632eb6f-7b60-4e7f-92a2-65862774fc03"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Taco}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="253" y="0" width="22" height="20" uuid="c71514e3-9c07-4c53-8c25-fcf67dba41af"/>
+				<reportElement mode="Opaque" x="253" y="0" width="22" height="20" backcolor="#4DBAD5" uuid="c71514e3-9c07-4c53-8c25-fcf67dba41af"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Talla}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="392" y="0" width="27" height="20" uuid="922f0791-7a5f-4120-9edd-6c69c9161e3a"/>
+				<reportElement mode="Opaque" x="392" y="0" width="27" height="20" backcolor="#4DBAD5" uuid="922f0791-7a5f-4120-9edd-6c69c9161e3a"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="327" y="0" width="66" height="20" uuid="ece1a9a4-aa3a-4033-bf9f-993bdf2a6e42"/>
+				<reportElement mode="Opaque" x="327" y="0" width="66" height="20" backcolor="#4DBAD5" uuid="ece1a9a4-aa3a-4033-bf9f-993bdf2a6e42"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6" isUnderline="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{estadoSepPedi}.equals(1)?"Pag sin Entr.":$F{estadoSepPedi}.equals(2)?"Pag y Entr.":"Anulado"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{estadoSepPedi}.equals(0)?"Pen. sin Entr.":$F{estadoSepPedi}.equals(1)?"Pag sin Entr.":$F{estadoSepPedi}.equals(2)?"Pag. y Entr.":"Anulado"]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement mode="Opaque" x="0" y="0" width="41" height="20" backcolor="#37ADCA" uuid="ddb42553-044d-4734-b393-1e108e0a0b0a"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{nomCliente}]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement x="18" y="20" width="577" height="26" uuid="72b302b4-a968-4aab-a248-057c3c3132b9"/>
+				<subreportParameter name="salePaymentid">
+					<subreportParameterExpression><![CDATA[$F{id}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "reportDePagosSepPed.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 	<columnFooter>
